<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/keania_one"
        android:text="@string/title_vaultpass"
        android:textColor="@color/vp_purple_title"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <LinearLayout
        android:id="@+id/containerInputs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@drawable/bg_input_field"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_input_field"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primary_40"
            android:text="@string/btn_login"
            app:cornerRadius="25dp" />

        <TextView
            android:id="@+id/tvRegisterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="Pas encore de compte ? S'enregistrer"
            android:textColor="@color/vp_purple_title" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/containerInputs"
        app:layout_constraintStart_toStartOf="@id/containerInputs"
        app:layout_constraintTop_toBottomOf="@id/containerInputs">
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1" android:background="@color/vp_divider" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:text="@string/or_login_with" />
        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1" android:background="@color/vp_divider" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerSocial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/containerDivider"
        app:layout_constraintStart_toStartOf="@id/containerDivider"
        app:layout_constraintTop_toBottomOf="@id/containerDivider">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_in_google"
            app:icon="@drawable/google_fill"
            app:iconGravity="textStart"
            android:backgroundTint="@color/primary_40"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGithub"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/sign_in_github"
            app:icon="@drawable/github_fill"
            app:iconGravity="textStart"
            android:backgroundTint="@color/primary_40"
            app:cornerRadius="15dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>