<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1_black"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <!-- Header: Logo and Title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivLogoHeader"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/logo"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/tvMainTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/keania_one"
                    android:text="@string/title_password_vault"
                    android:textColor="@color/white"
                    android:textSize="32sp" />
            </LinearLayout>

            <!-- Search Bar Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_search_bar"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/search_line"
                        app:tint="@color/secondary" />

                    <EditText
                        android:id="@+id/etSearch"
                        android:layout_width="wrap_content"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_search"
                        android:textColorHint="@color/secondary"
                        android:textColor="@color/secondary"
                        android:textSize="18sp"
                        android:inputType="text" />
                    <ImageButton
                        android:id="@+id/btnMenu"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/more_fill"
                        android:background="@android:color/transparent"
                        app:tint="@color/secondary"
                        android:contentDescription="@null" />
                </LinearLayout>


            </LinearLayout>

            <!-- Security Score Card -->
            <LinearLayout
                android:id="@+id/sectionSecurity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_security_score"
                android:gravity="center_vertical"
                android:backgroundTint="@color/primary_40"
                android:padding="16dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/shield_check_line"
                    app:tint="@color/green" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSecurityScoreLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_security_score"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvSecurityScoreValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/value_security_score"
                        android:textColor="@color/green" />
                </LinearLayout>
            </LinearLayout>

            <!-- Recent Section -->
            <LinearLayout
                android:id="@+id/sectionRecent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/shining_fill"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"

                        android:fontFamily="@font/lobster"
                        android:text="@string/label_recent"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFavoris"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@android:layout/simple_list_item_1" />
            </LinearLayout>

            <!-- Categories Section -->
            <LinearLayout
                android:id="@+id/sectionCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="16dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/layout_grid_fill"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/lobster"
                        android:text="@string/label_categories"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="4"
                    tools:listitem="@android:layout/simple_list_item_1" />
            </LinearLayout>

            <!-- Passwords Label -->
            <LinearLayout
                android:id="@+id/sectionPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/lock_2_fill"
                    app:tint="@color/primary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/lobster"
                    android:text="@string/label_password"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:strokeWidth="2dp"
        app:strokeColor="@color/primary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPasswords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card_purple"
            android:padding="8dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@android:layout/simple_list_item_2" />
    </com.google.android.material.card.MaterialCardView>
    <!-- Bottom Navigation Area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fabAdd"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/black"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/background1_black" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:src="@drawable/add_fill"
                app:tint="@color/white" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_nav"
            app:itemIconSize="28dp"

            app:itemIconTint="@color/nav_item_color"
            app:itemTextColor="@color/nav_item_color"
            app:itemBackground="@drawable/nav_item_background_selector"
            app:itemActiveIndicatorStyle="@null"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/bottom_nav_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
